creating experiment and trial_block

--- a/task_config.json
+++ b/task_config.json
@@ -1,51 +1,51 @@
 {
 	"tasks": [
 		{
-			"name": "target-practice",
-			"is_practice": false,
+			"name": "targets",
 			"blocks": [{"K": 5}],
+			"is_practice": false,
 			"ntrials_per_cue": 10,
 		},
 		{
-			"name": "instrumental-learning",
-			"is_practice": true,
+			"name": "instrumental",
 			"blocks": [{"K": 2}],
+			"is_practice": true,
 			"ntrials_per_cue": 3,
 		},
 		{
-			"name": "instrumental-learning",
-			"is_practice": false,
+			"name": "instrumental",
 			"blocks": [{"K": 2}, {"K": 3}, {"K": 4}, {"K": 5}, {"K": 6}],
+			"is_practice": false,
 			"ntrials_per_cue": 10,
 		},
 		{
-			"name": "target-practice-instrumental-learning",
-			"is_practice": true,
+			"name": "targets-instrumental",
 			"blocks": [{"K": 2}],
+			"is_practice": true,
 			"ntrials_per_cue": 3,
 		},
 		{
-			"name": "target-practice-instrumental-learning",
-			"is_practice": false,
+			"name": "targets-instrumental",
 			"blocks": [{"K": 5}],
+			"is_practice": false,
 			"ntrials_per_cue": 10,
 		},
 		{
-			"name": "target-practice",
-			"is_practice": false,
+			"name": "targets",
 			"blocks": [{"K": 2}, {"K": 3}, {"K": 4}, {"K": 5}, {"K": 6}],
+			"is_practice": false,
 			"ntrials_per_cue": 10,
 		},
 		{
-			"name": "instrumental-learning",
-			"is_practice": false,
+			"name": "instrumental",
 			"blocks": [{"K": 2}, {"K": 3}, {"K": 4}, {"K": 5}, {"K": 6}],
+			"is_practice": false,
 			"ntrials_per_cue": 10,
 		},
 		{
-			"name": "target-practice-instrumental-learning",
-			"is_practice": false,
+			"name": "targets-instrumental",
 			"blocks": [{"K": 2}, {"K": 3}, {"K": 4}, {"K": 5}, {"K": 6}],
+			"is_practice": false,
 			"ntrials_per_cue": 10,
 		},
 	]
