--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 .DS_Store
 assets/raw
+
+# Python-generated files
+__pycache__/
+*.py[oc]
+build/
+dist/
+wheels/
+*.egg-info
+
+# Virtual environments
+.venv
+
+# Logs
+logs/*
+!logs/.gitkeep
